--- a/AdashimaaTube.user.css
+++ b/AdashimaaTube.user.css
@@ -11,7 +11,6 @@
 @preprocessor   stylus
 
 @advanced range custom_homepage_videos'🏠 Number Of Videos Per Row' [5, 1, 10, 1]
-@advanced range increase_font_size "⚙️ Increase Font Size" [0, 0, 4, 1, 'px']
 @advanced range custom_border_radius "⚙️ Border Radius" [0, 0, 24, 1, 'px']
 @advanced select ratio_bar "⚒️ Display Ratio Bar (Beta)" ["Enabled", "Disabled"]
 @advanced color like_rb_color "  🎨 Like Ratio Color" #32CD32
@@ -42,7 +41,6 @@ Support me: https://ko-fi.com/sapondanaisriwan
 @-moz-document domain("youtube.com") {
 
     :root {
-        --increase-text: increase_font_size;
         --video-per-row: custom_homepage_videos;
         --sub-red-btn: #CC0000;
         --sub-white--text-btn: #F2F2F2;
@@ -64,7 +62,7 @@ Support me: https://ko-fi.com/sapondanaisriwan
         h1.ytd-watch-metadata {
             font-family: "Roboto", sans-serif;
             font-weight: 400 !important;
-            font-size: calc(18px + var(--increase-text)) !important; // line-height: unset;
+            font-size: 18px !important; // line-height: unset;
         }
 
         /* Remove channel */
@@ -725,49 +723,7 @@ Support me: https://ko-fi.com/sapondanaisriwan
     }
 
 
-
-    /* Increase font size */
-    #channel-name.ytd-c4-tabbed-header-renderer {
-        font-size: calc(2.4rem + var(--increase-text)) !important;
-    }
-
-    /* view count */
-    ytd-video-view-count-renderer[small]/* upload date */
-    #info-strings.ytd-video-primary-info-renderer,
-
-    /* title video */
-    #video-title.ytd-compact-video-renderer,
-    ytd-rich-grid-media[mini-mode] #video-title.ytd-rich-grid-media,
-
-    /* comment section */
-    #content-text.ytd-comment-renderer,
-
-    yt-formatted-string[has-link-only_]:not([force-default-style]) a.yt-simple-endpoint.yt-formatted-string,
-
-    /* description */
-    ytd-expander.ytd-video-secondary-info-renderer {
-        font-size: calc(1.4rem + var(--increase-text)) !important;
-    }
-
-    /* hashtag */
-    #super-title.ytd-watch-metadata,
-    /* channel name*/
-    ytd-video-meta-block:not([rich-meta]) #byline-container.ytd-video-meta-block,
-
-    /* view count and upload date */
-    ytd-video-meta-block:not([rich-meta])[inline-badges] #metadata-line.ytd-video-meta-block,
-    ytd-video-meta-block[rich-meta][mini-mode] #metadata-line.ytd-video-meta-block,
-
-    /* subscribers */
-    #owner-sub-count.ytd-video-owner-renderer/* comment section */
-    .published-time-text.ytd-comment-renderer {
-        // margin-top: var(--increase-text);
-        font-size: calc(1.2rem + var(--increase-text)) !important;
-    }
-
-    #author-text.yt-simple-endpoint.ytd-comment-renderer {
-        font-size: calc(1.3rem + var(--increase-text)) !important;
-    } // html, #home-container-media {
+    // html, #home-container-media {
     //     --ytd-rich-grid-items-per-row: custom_homepage_videos !important;
     // }
     /*  Youtube fog kids */
